--- a/app/src/main/res/layout/activity_main_dark.xml
+++ b/app/src/main/res/layout/activity_main_dark.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_main_dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -28,10 +29,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
             android:gravity="center"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter12"
             app:layout_constraintHorizontal_bias="0.5"
@@ -47,9 +48,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter13"
             app:layout_constraintHorizontal_bias="0.5"
@@ -65,9 +66,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter14"
             app:layout_constraintHorizontal_bias="0.5"
@@ -83,9 +84,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter15"
             app:layout_constraintHorizontal_bias="0.5"
@@ -102,9 +103,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -131,10 +132,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
             android:gravity="center"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter22"
             app:layout_constraintHorizontal_bias="0.5"
@@ -150,9 +151,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter23"
             app:layout_constraintHorizontal_bias="0.5"
@@ -168,9 +169,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter24"
             app:layout_constraintHorizontal_bias="0.5"
@@ -186,9 +187,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter25"
             app:layout_constraintHorizontal_bias="0.5"
@@ -205,9 +206,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -228,22 +229,22 @@
         app:layout_constraintTop_toBottomOf="@+id/attempt2">
 
         <TextView
-        android:id="@+id/letter31"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="8dp"
-        android:textColor="@color/black"
-        android:textSize="50dp"
-        android:gravity="center"
-        android:background="@drawable/tiles_normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/letter32"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/letter31"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="8dp"
+            android:textColor="@color/white"
+            android:textSize="50dp"
+            android:gravity="center"
+            android:background="@drawable/tiles_dark"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/letter32"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/letter32"
@@ -254,9 +255,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter33"
             app:layout_constraintHorizontal_bias="0.5"
@@ -272,9 +273,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter34"
             app:layout_constraintHorizontal_bias="0.5"
@@ -290,9 +291,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter35"
             app:layout_constraintHorizontal_bias="0.5"
@@ -309,9 +310,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -339,10 +340,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
             android:gravity="center"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter42"
             app:layout_constraintHorizontal_bias="0.5"
@@ -358,9 +359,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter43"
             app:layout_constraintHorizontal_bias="0.5"
@@ -376,9 +377,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter44"
             app:layout_constraintHorizontal_bias="0.5"
@@ -394,9 +395,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter45"
             app:layout_constraintHorizontal_bias="0.5"
@@ -413,9 +414,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -443,10 +444,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
             android:gravity="center"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter52"
             app:layout_constraintHorizontal_bias="0.5"
@@ -462,9 +463,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter53"
             app:layout_constraintHorizontal_bias="0.5"
@@ -480,9 +481,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter54"
             app:layout_constraintHorizontal_bias="0.5"
@@ -498,9 +499,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter55"
             app:layout_constraintHorizontal_bias="0.5"
@@ -517,9 +518,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -546,10 +547,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
             android:gravity="center"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter62"
             app:layout_constraintHorizontal_bias="0.5"
@@ -565,9 +566,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter63"
             app:layout_constraintHorizontal_bias="0.5"
@@ -583,9 +584,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter64"
             app:layout_constraintHorizontal_bias="0.5"
@@ -601,9 +602,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter65"
             app:layout_constraintHorizontal_bias="0.5"
@@ -620,9 +621,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
+            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -953,7 +954,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="4dp"
             android:hint="ENTER"
-            android:onClick="validate"
+            android:onClick="set"
             android:padding="5dp"
             android:textColorHint="#000000"
             android:textSize="15dp"
@@ -967,7 +968,7 @@
             android:id="@+id/imageView"
             android:layout_width="61dp"
             android:layout_height="0dp"
-            android:onClick="delete"
+
             android:layout_marginStart="4dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/keys_normal"
@@ -1145,6 +1146,5 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
