--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="pastel_red">#EB3F3F</color>
+    <color name="gray">#A1A1A1</color>
+    <color name="light_gray">#C3C3C3</color>
 </resources>
