--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -654,6 +654,7 @@
             android:padding="5dp"
             android:textColorHint="#000000"
             android:textSize="20dp"
+            android:tag="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/w"
             app:layout_constraintHorizontal_bias="0.5"
@@ -662,6 +663,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/w"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -679,6 +681,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/e"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -696,6 +699,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/r"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -713,6 +717,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/t"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -730,6 +735,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/y"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -747,6 +753,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/u"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -764,6 +771,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/i"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -781,6 +789,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/o"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -798,6 +807,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/p"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -829,6 +839,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/z"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -846,6 +857,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/x"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -863,6 +875,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/c"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -880,6 +893,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/v"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -897,6 +911,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/b"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -914,6 +929,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/n"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -931,6 +947,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/m"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -993,6 +1010,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/a"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="32dp"
@@ -1010,6 +1028,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/s"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -1027,6 +1046,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/d"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -1044,6 +1064,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/f"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -1061,6 +1082,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/g"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -1078,6 +1100,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/h"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -1095,6 +1118,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/j"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -1112,6 +1136,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/k"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
@@ -1129,6 +1154,7 @@
 
         <com.example.wordlepromax.Key
             android:id="@+id/l"
+            android:tag="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
