--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -7,11 +8,20 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/attempt1"
         android:layout_width="375dp"
         android:layout_height="85dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="64dp"
         app:layout_constraintBottom_toTopOf="@+id/attempt2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -28,10 +38,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/tiles_normal"
+            android:gravity="center"
             android:textColor="@color/black"
             android:textSize="50dp"
-            android:gravity="center"
-            android:background="@drawable/tiles_normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter12"
             app:layout_constraintHorizontal_bias="0.5"
@@ -46,10 +56,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/tiles_normal"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter13"
             app:layout_constraintHorizontal_bias="0.5"
@@ -64,10 +74,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/tiles_normal"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter14"
             app:layout_constraintHorizontal_bias="0.5"
@@ -82,10 +92,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/tiles_normal"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter15"
             app:layout_constraintHorizontal_bias="0.5"
@@ -101,10 +111,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/tiles_normal"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="50dp"
-            android:background="@drawable/tiles_normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
