--- a/app/src/main/res/layout/activity_main_dark.xml
+++ b/app/src/main/res/layout/activity_main_dark.xml
@@ -8,11 +8,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/attempt1"
         android:layout_width="375dp"
         android:layout_height="85dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="64dp"
         app:layout_constraintBottom_toTopOf="@+id/attempt2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -29,10 +42,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/tiles_dark"
+            android:gravity="center"
             android:textColor="@color/white"
             android:textSize="50dp"
-            android:gravity="center"
-            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter12"
             app:layout_constraintHorizontal_bias="0.5"
@@ -47,10 +60,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/tiles_dark"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter13"
             app:layout_constraintHorizontal_bias="0.5"
@@ -65,10 +78,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/tiles_dark"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter14"
             app:layout_constraintHorizontal_bias="0.5"
@@ -83,10 +96,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/tiles_dark"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/letter15"
             app:layout_constraintHorizontal_bias="0.5"
@@ -102,10 +115,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/tiles_dark"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="50dp"
-            android:background="@drawable/tiles_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
