--- a/app/src/main/res/drawable/not_in_word.xml
+++ b/app/src/main/res/drawable/not_in_word.xml
@@ -4,7 +4,7 @@
         android:radius="5dp"
         />
     <solid
-        android:color="#474747"
+        android:color="@color/dark_gray"
         />
     <padding
         android:left="0dp"
